Add sampler